--- a/templates/global/product-card.html.twig
+++ b/templates/global/product-card.html.twig
@@ -9,7 +9,7 @@
 <div class="col-sm-6 col-lg-4 col-xl-3">
 	<div class="card border bg-transparent overflow-hidden p-0 h-100">
 		<div class="position-absolute top-0 start-0 p-3">
-			<span class="badge" style="background-color: {{ product.category.color }}">
+			<span class="badge text-bg-dark mb-3">
                 {{ product.category.name }}
             </span>
 			{% if product.tax %}
