--- a/templates/data/index.html.twig
+++ b/templates/data/index.html.twig
@@ -1,20 +1,107 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello DataController!{% endblock %}
+{% set pagetitle = 'Key account'|trans %}
+{% block title pagetitle %}
+
+{% block breadcrumb %}
+	{% set breadcrumb = [{ "current":(pagetitle) }] %}
+	{% include "global/breadcrumb.html.twig" with breadcrumb %}
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/home/rdequidt/www/restaurant/src/Controller/DataController.php</code></li>
-        <li>Your template at <code>/home/rdequidt/www/restaurant/templates/data/index.html.twig</code></li>
-    </ul>
-</div>
+    <section class="pt-0">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="card bg-transparent">
+                        <div class="card-header bg-transparent border-bottom d-flex justify-content-between align-items-center p-0 pb-3">
+                            <div>
+                                <h6 class="card-title mb-0">
+                                    {{ 'Personal key account'|trans }}
+                                </h6>
+                                <span class="small mb-0">{{ 'Pay'|trans }} : {{ app.user.account.balance }} {{ 'keys'|trans }}</span>
+                            </div>
+                            <div>
+                                {% if is_granted('ROLE_VERIFIED') %}
+                                    <a href="{{ path('data_history', { id: app.user.account.id }) }}" class="btn btn-sm btn-primary me-2">
+                                        <span class="fas fa-list me-2"></span>{{ 'History'|trans }}
+                                    </a>
+                                {% endif %}
+                            </div>
+                        </div>
+                        {% if is_granted("ROLE_MANAGER") and app.user.members|length == 1 %}
+                            <div class="col-12 col-sm-6 col-lg-4 my-4 mb-lg-0">
+                                <div class="card bg-transparent mb-4 p-0">
+                                    <div class="card-header bg-transparent border-bottom d-flex justify-content-between align-items-center p-0 pb-3">
+                                        <div>
+                                            <h6 class="card-title mb-0">
+                                                {{ 'Member key account'|trans }}
+                                            </h6>
+                                            <span class="small mb-0">
+                                                {{ 'Pay'|trans }} : {{ app.user.member.account.balance }} {{ 'keys'|trans }}
+                                            </span>
+                                        </div>
+                                        <div>
+                                            {% if is_granted('ROLE_VERIFIED') %}
+                                                <a href="{{ path('data_history', { id: app.user.member.account.id }) }}" class="btn btn-sm btn-primary me-2">
+                                                    {{ 'History'|trans }}
+                                                </a>
+                                            {% endif %}
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        {% endif %}
+                        {% if is_granted("ROLE_MANAGER") and app.user.members|length > 1 %}
+                            <div class="col-12 col-sm-6 col-lg-4 my-4 mb-lg-0">
+                                <div class="card bg-transparent mb-4 p-0">
+                                    <div class="card-header bg-transparent border-bottom p-0 pb-3">
+                                        <h6 class="card-title mb-0">
+                                            {{ 'Member key account'|trans }}
+                                        </h6>
+                                    </div>
+                                    <div class="list-group list-group-flush flex-grow-1">
+                                        {% for member in app.user.members %}
+                                            <div class="list-group-item d-flex justify-content-between align-items-center">
+                                                <div class="d-flex flex-column">
+                                                    <span class="fw-bold">{{ member.name }}</span>
+                                                    {{ 'Pay'|trans }} : {{ member.account.balance }} {{ 'keys'|trans }}
+                                                </div>
+                                                {% if is_granted('ROLE_VERIFIED') %}
+                                                    <a href="{{ path('data_history', { id: member.account.id }) }}" class="btn btn-sm btn-primary me-2">
+                                                        {{ 'History'|trans }}
+                                                    </a>
+                                                {% endif %}
+                                            </div>
+                                        {% endfor %}
+                                    </div>
+                                </div>
+                            </div>
+                        {% endif %}
+                        {% if is_granted("ROLE_DATA_PURCHASE") or is_granted("ROLE_DATA_TRANSFER") %}
+                            <div class="col-12 col-sm-6 col-lg-4 my-4 mb-lg-0">
+                                <div class="card bg-transparent rounded-3 mb-0">
+                                    <div class="card-body px-0">
+                                        {% if is_granted("ROLE_DATA_PURCHASE") %}
+                                            <a href="{{ path("data_purchase") }}" class="btn btn-success-soft mb-2 mb-sm-0">
+                                                {{ 'Purchase keys'|trans }}
+                                            </a>
+                                        {% endif %}
+                                        {% if is_granted("ROLE_DATA_TRANSFER") %}
+                                            <a href="{{ path("data_transfer") }}" class="btn btn-primary mb-0">
+                                                {{ 'Transfer keys'|trans }}
+                                            </a>
+                                        {% endif %}
+                                    </div>
+                                </div>
+                            </div>
+                        {% endif %}
+                    </div>
+                </div>
+            </div>
+            {% if is_granted("ROLE_MANAGER") or is_granted("ROLE_SALES_PERSON") %}
+                {{ render(path('data_clients')) }}
+            {% endif %}
+        </div>
+    </section>
 {% endblock %}
