--- a/templates/global/product-card-item.html.twig
+++ b/templates/global/product-card-item.html.twig
@@ -9,7 +9,7 @@
 <div class="col-sm-6 col-lg-4">
 	<div class="card border bg-transparent overflow-hidden p-0 h-100">
 		<div class="position-absolute start-0 top-0 d-flex align-items-start w-100 z-index-2 p-3">
-			<span class="badge" style="background-color: {{ product.category.color }}">
+			<span class="badge text-bg-dark mb-3">
                 {{ product.category.name }}
             </span>
 			{% if product.tax %}
