--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -45,7 +45,7 @@
             <div class="container">
                 <div class="d-sm-flex justify-content-between align-items-center mb-4">
                     <h3>{{ "What's trending now"|trans }}</h3>
-                    <a class="icon-link icon-link-hover text-body-secondary text-primary-hover" href="#">
+                    <a class="icon-link icon-link-hover text-body-secondary text-primary-hover" href="{{ path("shop_index") }}">
                         {{ 'See all products'|trans }}
                         <i class="fas fa-arrow-right"></i> 
                     </a>
