--- a/templates/sav/trigger.html.twig
+++ b/templates/sav/trigger.html.twig
@@ -12,40 +12,48 @@
     <section class="pt-0">
         <div class="container">
             <div class="row">
-                <div class="col-xl-9 col-lg-8 col-md-12 col-12">
-                    <div class="card bg-transparent p-0">
-                        <div class="card-header bg-transparent border-bottom d-flex justify-content-between align-items-center p-0 pb-3">
-                            <h6 class="card-title mb-0">
+                <div class="col-lg-8 mb-6 mb-lg-0">
+                    <div class="card bg-transparent mb-6">
+                        <div class="card-header bg-transparent border-bottom d-flex justify-content-between align-items-center px-0">
+                            <h5>
                                 {{ pagetitle }} 
-                            </h6>
-                            <div>
-                                <a href="" class="btn btn-sm btn-outline-success me-2">
-                                    {{ 'Return to list'|trans }}
-                                </a>
+                            </h5>
+                            <a href="{{ path('sav_index') }}" class="btn btn-sm btn-light border mb-0">
+                                <i class="fas fa-ticket me-1"></i>{{ 'Sav'|trans }}
+                            </a>
+                        </div>
+                        <div class="card-body px-0 pb-0">
+                            <div class="card-body p-0">
+                                {{ form_start(form, {'attr': {'novalidate': 'novalidate', 'class': 'row g-3 needs-validation'} }) }}
+                                    <div>
+                                        {% include "global/message.html.twig" with { type: "info", icon: "fas fa-exclamation", message: ("The fields preceded with a red * are mandatory"|trans) } %}
+                                    </div>
+                                    {{ form_errors(form) }}
+                                    {{ form_widget(form._token) }}
+                                    <div class="col-12">
+                                        {{ form_row(form.line) }}
+                                    </div>
+                                    <div class="col-12">
+                                        {{ form_row(form.description) }}
+                                    </div>
+                                    <div class="col-12">
+                                        {{ form_row(form.comment) }}
+                                    </div>
+                                    <div class="col-12">
+                                        {{ form_row(form._attachments) }}
+                                    </div>
+                                    <div id="sav_attachments" class="list-group mt-3"></div>
+                                    <div class="d-flex justify-content-end mt-4">
+                                        <button type="submit" class="btn btn btn-primary mb-0">
+                                            {{ 'Send'|trans }}
+                                        </button>
+                                    </div>
+                                {{ form_end(form, {render_rest: false}) }}
                             </div>
                         </div>
-                        {{ form_start(form, {'attr': {'novalidate': 'novalidate', 'class': 'needs-validation'} }) }}
-                            <div class="card-body px-0">
-                                <div>
-                                    {% include "global/message.html.twig" with { type: "info", icon: "fas fa-exclamation", message: ("The fields preceded with a red * are mandatory"|trans) } %}
-                                </div>
-                                {{ form_errors(form) }}
-                                {{ form_widget(form._token) }}
-                                {{ form_row(form.line) }}
-                                {{ form_row(form.description) }}
-                                {{ form_row(form.comment) }}
-                                {{ form_row(form._attachments) }}
-                                <div id="sav_attachments" class="list-group mt-3"></div>
-                                <div class="d-flex justify-content-end mt-4">
-                                    <button type="submit" class="btn btn btn-primary mb-0">
-                                        {{ 'Send'|trans }}
-                                    </button>
-                                </div>
-                            </div>
-                        {{ form_end(form, {render_rest: false}) }}
                     </div>
                 </div>
-                <div class="col-xl-3 col-lg-4 col-md-12 col-12"></div>
+                <div class="col-lg-4 ps-xl-6"></div>
             </div>
         </div>
     </section>
