--- a/templates/shop/index.html.twig
+++ b/templates/shop/index.html.twig
@@ -9,6 +9,7 @@
 {% endblock %}
 
 {% block body %}
+	{#  
 	<section class="pt-0">
 		<div class="container">
 			<div class="row">
@@ -57,4 +58,168 @@
 			</div>
 		</div>
 	</section>
+	#}
+
+
+
+	<aside>
+		<nav class="section-nav">
+			<h1 class="text-center my-0 py-3 px-3 px-lg-0 text-uppercase border-bottom d-flex d-lg-block justify-content-between">
+				Boutique
+				<a href="#" class="sidebar-toggler d-lg-none" aria-expanded="false">
+					<span class="fas fa-times fa-md text-dark"></span>
+				</a>
+			</h1>
+			<ul class="nav flex-column" id="subcategorys">
+				<li class="nav-item">
+					<a class="nav-link" data-bs-toggle="collapse" href="#filter" role="button" aria-expanded="{{ form.vars.submitted ? "true" : "false" }}" aria-controls="filter">Recherche</a>
+					{{ form_start(form, {attr: {class: form.vars.attr.class ~ (form.vars.submitted ? " show")} }) }}
+						{{ form_widget(form._token) }}
+						{{ form_widget(form.min) }}
+						{{ form_widget(form.max) }}
+						<input type="hidden" name="page" value="1">
+						<div class="nav-item">
+							<div class="nav-link">
+								<span class="fw-bold">Rechercher un produit</span>
+								{{ form_row(form.keywords) }}
+							</div>
+						</div>
+						<div class="nav-item">
+							<div class="nav-link">
+								<span class="fw-bold">Prix</span>
+								<div class="slider" data-min="{{ min }}" data-max="{{ max }}" data-min-target="#filter_min" data-max-target="#filter_max"></div>
+							</div>
+						</div>
+						<div class="nav-item">
+							<div class="nav-link">
+								<span class="fw-bold">Marque</span>
+								{{ form_row(form.brand) }}
+							</div>
+						</div>
+						<div class="nav-item">
+							<div class="nav-link text-center">
+								<button type="submit" class="btn btn-primary">Rechercher</button>
+							</div>
+						</div>
+					{{ form_end(form) }}
+				</li>
+				{% for s in subcategories %}
+					{% if s.numberOfProducts > 0 %}
+						<li class="nav-item">
+							<a class="nav-link" data-bs-toggle="collapse" href="#subcategory-{{ s.id }}" role="button" aria-expanded="{{ not form.vars.submitted and subcategory is not null and subcategory == s ? "true" : "false" }}" aria-controls="subcategory-{{ s.id }}">{{ s.name }}</a>
+							<ul class="nav flex-column collapse {{ not form.vars.submitted and subcategory is not null and subcategory == s ? "show" }}" id="subcategory-{{ s.id }}" data-bs-parent="#subcategories">
+								{% for c in s.categories %}
+									{% if c.numberOfProducts > 0 %}
+										<li class="nav-item">
+											{% if c.children|length > 0 %}
+												<a class="nav-link" data-bs-toggle="collapse" href="#category-{{ c.id }}" role="button" aria-expanded="{{ not form.vars.submitted and category is not null and category.parent == c and subcategory is not null and subcategory == s ? "true" : "false" }}" aria-controls="category-{{ c.id }}">{{ c.name }} ({{ c.numberOfProducts }})</a>
+												<ul class="nav flex-column collapse {{ not form.vars.submitted and category is not null and category.parent == c and subcategory is not null and subcategory == s ? "show" }}" id="category-{{ c.id }}" data-bs-parent="#subcategory-{{ s.id }}">
+													{% for child in c.children %}
+														{% if child.numberOfProducts > 0 %}
+															<li class="nav-item">
+																<a href="{{ path("shop_index", {page: 1, category: child.slug, subcategory: s.slug}) }}" class="nav-link {{ category == child ? "active" }}">{{ child.name }} ({{ child.numberOfProducts }})</a>
+															</li>
+														{% endif %}
+													{% endfor %}
+												</ul>
+											{% else %}
+												<a href="{{ path("shop_index", {page: 1, category: c.slug, subcategory: s.slug}) }}" class="nav-link {{ category == c ? "active" }}">{{ c.name }} ({{ c.numberOfProducts }})</a>
+											{% endif %}
+										</li>
+									{% endif %}
+								{% endfor %}
+							</ul>
+						</li>
+					{% endif %}
+				{% endfor %}
+			</ul>
+		</nav>
+	</aside>
+    <main class="container-fluid">
+        <div class="row">
+            <div class="col-12 mb-4 d-flex flex-column flex-md-row justify-content-md-between">
+                <div class="d-flex flex-grow-1 align-items-center mb-3 mb-md-0">
+                    <a href="#" class="me-3 sidebar-toggler" aria-expanded="false">
+                        <span class="fas fa-lg text-white"></span>
+                    </a>
+                    <h1 class="text-white mb-0">
+                        {% if category is not null %}
+                            {{ category.name }}
+                        {% else %}
+                            Tous les produits
+                        {% endif %}
+                    </h1>
+                </div>
+                <div class="d-flex flex-column flex-sm-row">
+                    <div class="dropdown me-0 me-sm-3 mb-3 mb-sm-0">
+                        <button class="btn btn-light dropdown-toggle" type="button" id="dropdown-sort" data-bs-toggle="dropdown" aria-expanded="false">
+                            {{ params.limit }} produits par page
+                        </button>
+                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdown-sort">
+                            <li><a class="dropdown-item" href="{{ path("shop_index", params|merge({page: 1, limit: 18})) }}">18 produits par page</a></li>
+                            <li><a class="dropdown-item" href="{{ path("shop_index", params|merge({page: 1, limit: 36})) }}">36 produits par page</a></li>
+                            <li><a class="dropdown-item" href="{{ path("shop_index", params|merge({page: 1, limit: 72})) }}">72 produits par page</a></li>
+                            <li><a class="dropdown-item" href="{{ path("shop_index", params|merge({page: 1, limit: 98})) }}">98 produits par page</a></li>
+                            <li><a class="dropdown-item" href="{{ path("shop_index", params|merge({page: 1, limit: 196})) }}">196 produits par page</a></li>
+                        </ul>
+                    </div>
+                    <div class="dropdown">
+                        <button class="btn btn-light dropdown-toggle" type="button" id="dropdown-sort" data-bs-toggle="dropdown" aria-expanded="false">
+                            {% if params.sort == "new-products" %}
+                                Nouveautés
+                            {% elseif params.sort == "amount-asc" %}
+                                Valeur croissante
+                            {% elseif params.sort == "amount-desc" %}
+                                Valeur décroissante
+                            {% elseif params.sort == "name-asc" %}
+                                Tri A -> Z
+                            {% elseif params.sort == "name-desc" %}
+                                Tri Z -> A
+                            {% endif %}
+                        </button>
+                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdown-sort">
+                            <li><a class="dropdown-item" href="{{ path("shop_index", params|merge({page: 1, sort: "new-products"})) }}">Nouveautés</a></li>
+                            <li><a class="dropdown-item" href="{{ path("shop_index", params|merge({page: 1, sort: "amount-asc"})) }}">Valeur croissante</a></li>
+                            <li><a class="dropdown-item" href="{{ path("shop_index", params|merge({page: 1, sort: "amount-desc"})) }}">Valeur décroissante</a></li>
+                            <li><a class="dropdown-item" href="{{ path("shop_index", params|merge({page: 1, sort: "name-asc"})) }}">Tri A -> Z</a></li>
+                            <li><a class="dropdown-item" href="{{ path("shop_index", params|merge({page: 1, sort: "name-desc"})) }}">Tri Z -> A</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row align-items-stretch">
+            {% for product in products %}
+                <div class="col-12 col-sm-6 col-lg-4 col-xl-3 col-xxl-2 product">
+                    <a href="{{ path("shop_product", {slug: product.slug}) }}" class="card h-100">
+                        <img src="{{ product.imageName ? (product.getImagePath) : product.getImagePlaceholder }}" class="card-img-top" alt="{{ product.brand.name }} - {{ product.name }}">
+                        <div class="card-body flex-grow-1">
+                            <span class="fw-bold">{{ product.brand.name }} - {{ product.name }}</span>
+                            <p class="text-muted">{{ product.content|html_markdown_excerpt(100) }}</p>
+                        </div>
+                        <div class="card-footer bg-danger d-flex justify-content-center align-items-center text-white fs-4 fw-bold big">
+                            {{ product.amount }} <span class="ms-1 icon icon-lg icon-key"></span>
+                        </div>
+                    </a>
+                </div>
+            {% endfor %}
+        </div>
+        <div class="row">
+            {% if pages > 1 %}
+                <nav class="mb-3 mx-auto">
+                    <ul class="pagination justify-content-center mb-0">
+                        {% if params.page > 1 %}
+                            <li class="page-item"><a class="page-link" href="{{ path("shop_index", params|merge({page: params.page - 1})) }}">Précedent</a></li>
+                        {% endif %}
+                        {% for p in pageRange %}
+                            <li class="page-item {{ p == params.page ? "active" }}"><a class="page-link" href="{{ path("shop_index", params|merge({page: p})) }}">{{ p }}</a></li>
+                        {% endfor %}
+                        {% if params.page < pages %}
+                            <li class="page-item"><a class="page-link" href="{{ path("shop_index", params|merge({page: params.page + 1})) }}">Suivant</a></li>
+                        {% endif %}
+                    </ul>
+                </nav>
+            {% endif %}
+        </div>
+    </main>
 {% endblock %}
