--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -37,12 +37,10 @@
                                             <div class="row g-3 g-sm-4">
                                                 <div class="col-xl-5">
                                                     <h6 class="mb-1">
-                                                        <a href="{{ path('product', {id: line.product.id }) }}">
+                                                        <a href="{{ path('shop_product', { slug: line.product.slug }) }}">
                                                             {{ line.product.name }}
                                                         </a>
-                                                        <span class="fw-bold">
-                                                            {{ (settings['currency_position']  == 'left' ? settings['currency_symbol'] : '') ~ line.amount ~ (settings['currency_position'] == 'right' ? settings['currency_symbol'] : '') }}
-                                                        </span>
+                                                        <span class="fw-bold">{{ line.amount }}</span>
                                                     </h6>
                                                     <ul class="nav nav-divider small align-items-center mt-1">
                                                         <li class="nav-item">{{ 'Quantity'|trans }}: {{ line.quantity }}</li>
@@ -50,19 +48,20 @@
                                                 </div>
                                                 <div class="col-sm-6 col-md-4 col-xl-2">
                                                     <div class="input-group input-spinner">
-                                                        <a href="{{ path("cart_decrease_quantity", {id: line.id}) }}" type="button" class="button-minus btn btn-sm" data-field="quantity">-</a>
-                                                        <a href="{{ path("cart_increase_quantity", {id: line.id}) }}" type="button" class="button-plus btn btn-sm" data-field="quantity">+</a>
+                                                        <a href="{{ path("cart_decrease_quantity", { id: line.id }) }}" type="button" class="button-minus btn btn-sm" data-field="quantity">-</a>
+                                                        <a href="{{ path("cart_increase_quantity", { id: line.id }) }}" type="button" class="button-plus btn btn-sm" data-field="quantity">+</a>
                                                     </div>
                                                 </div>
                                                 <div class="col-sm-6 col-md-4 col-xl-3 text-md-center">
                                                     <h5 class="mb-0">
-                                                        {{ (settings['currency_position']  == 'left' ? settings['currency_symbol'] : '') ~ line.quantity * line.amount ~ (settings['currency_position'] == 'right' ? settings['currency_symbol'] : '') }}
+                                                        {{ line.quantity * line.amount }}
                                                     </h5>
                                                 </div>
                                                 <div class="col-sm-6 col-md-4 col-xl-2 text-md-center">
                                                     <a href="" class="text-danger small">
                                                         <i class="fas fa-xmark"></i> {{ 'Delete'|trans }}
                                                     </a>
+                                                    <span class="fw-bold">{{ line.total }}</span>
                                                 </div>
                                             </div>
                                         </div>
@@ -104,7 +103,7 @@
                                     <li class="list-group-item d-flex justify-content-between align-items-center">
                                         <span>{{ 'Subtotal'|trans }}</span>
                                         <span class="heading-color fw-semibold mb-0">
-                                            {{ (settings['currency_position']  == 'left' ? settings['currency_symbol'] : '') ~ order.total ~ (settings['currency_position'] == 'right' ? settings['currency_symbol'] : '') }}
+                                            {{ order.total }}
                                         </span>
                                     </li>
                                     <li class="list-group-item d-flex justify-content-between align-items-center">
